# M14404

./: .gitignore  .pre-commit-config.yaml  INSTALLATION.md  README.md  pyproject.toml
M14404/: base_subdomain.py  db.py  main.py  resolver_service.py  settings.py
M14404/subdomains/: _.py  about.py  log.py  www.html  www.py
deploy/nginx/: M14404.conf
deploy/openrc/: M14404
tests/: test_http_ws_flow.py  test_log_subdomain.py  test_resolver_service.py  test_www_logging.py
